--- a/addincome.html
+++ b/addincome.html
@@ -32,19 +32,19 @@
                     <h2 class="text-center p-5">Wprowadź dane przychodu:</h2>
                 </blockquote>
                 <div class="row">
-                    <div class="col-3 border-right pr-0">
-                        <div class="nav flex-column" aria-orientation="vertical">
-                            <a class="btn btn-primary bt-sm m-3" href="menu.html" role="button"
-                                aria-selected="false"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                                    fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                    <nav class="col-3 border-right pr-0">
+                        <div class="nav flex-column">
+                            <a class="btn btn-primary bt-sm m-3" href="menu.html" role="button"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                    class="bi bi-house-fill" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
                                     <path fill-rule="evenodd"
                                         d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
                                 </svg> Strona Główna</a>
-                            <a class="btn btn-primary bt-sm m-3 active" href="addincome.html" role="button"
-                                aria-selected="true"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                                    fill="currentColor" class="bi bi-cash-coin" viewBox="0 0 16 16">
+                            <a class="btn btn-primary bt-sm m-3 active" href="addincome.html" role="button"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                    class="bi bi-cash-coin" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8zm5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0z" />
                                     <path
@@ -53,27 +53,27 @@
                                         d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083c.058-.344.145-.678.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1H1z" />
                                     <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 5.982 5.982 0 0 1 3.13-1.567z" />
                                 </svg> Dodaj Przychóda</a>
-                            <a class="btn btn-primary bt-sm m-3" href="addexpense.html" role="button"
-                                aria-selected="false"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                                    fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                            <a class="btn btn-primary bt-sm m-3" href="addexpense.html" role="button"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                    class="bi bi-cart4" viewBox="0 0 16 16">
                                     <path
                                         d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
                                 </svg> Dodaj Wydatek</a>
-                            <a class="btn btn-primary bt-sm m-3" href="balance.html" role="button"
-                                aria-selected="false"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                                    fill="currentColor" class="bi bi-list-check" viewBox="0 0 16 16">
+                            <a class="btn btn-primary bt-sm m-3" href="balance.html" role="button"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                    class="bi bi-list-check" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
                                         d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0zm0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z" />
                                 </svg> Przeglądaj Bilans</a>
-                            <a class="btn btn-primary bt-sm m-3" href="#" role="button" aria-selected="false"><svg
+                            <a class="btn btn-primary bt-sm m-3" href="#" role="button"><svg
                                     xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                                     class="bi bi-wrench" viewBox="0 0 16 16">
                                     <path
                                         d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z" />
                                 </svg> Ustawienia</a>
-                            <a class="btn btn-primary bt-sm m-3" href="index.html" role="button"
-                                aria-selected="false"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22"
-                                    fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
+                            <a class="btn btn-primary bt-sm m-3" href="index.html" role="button"><svg
+                                    xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                    class="bi bi-door-open" viewBox="0 0 16 16">
                                     <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
                                     <path
                                         d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z" />
@@ -82,7 +82,7 @@
                         <div>
                             <p id="logIn" class="text-success mt-5 p-3">Zalogowany: Użytkownik</p>
                         </div>
-                    </div>
+                    </nav>
                     <div class="col-9 text-center">
                         <form action="#">
                             <div class="d-flex align-items-center flex-column  ">
